# feline

./: .gitignore  CMakeLists.txt  README.md  README.pt-BR.md
dynamic/: CMakeLists.txt  README.md
dynamic/include/feline_dyn/: dyn_graph.hpp  dyn_index.hpp  dyn_query.hpp  dyn_scc.hpp  feline_pk.hpp
dynamic/src/: dyn_graph.cpp  dyn_index.cpp  dyn_query.cpp  dyn_scc.cpp  feline_pk.cpp
dynamic/test/: oracle.hpp  test_dynamic.cpp  test_util.hpp
dynamic/tools/: dyn_demo.cpp  dyn_incremental.cpp
include/feline/: graph.hpp  index.hpp  ordering.hpp  query.hpp  timer.hpp
src/: graph.cpp  index.cpp  main.cpp  query.cpp
test/: test_main.cpp
test/test_data/: arXiv_sub_6000-1.txt  citeseer_sub_10720.txt  cyclic.txt  go_sub_6793.txt  pubmed_sub_9000-1.txt  yago_sub_6642.txt
tools/: convert_adjlist.cpp  plot_index.py
